feat: fix up and document user and auth endpoints
